travail/2e_semestre/bachelor_Sem/labo/compilateur/evalSignature/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> exp next
Rule 2     exp -> NAME OP exp CP
Rule 3     exp -> exp more
Rule 4     exp -> NAME
Rule 5     more -> COMA exp more
Rule 6     more -> COMA exp
Rule 7     next -> DOUBLESEMICOLON
Rule 8     next -> DOUBLESEMICOLON calc

Terminals, with rules where they appear

COMA                 : 5 6
CP                   : 2
DOUBLESEMICOLON      : 7 8
NAME                 : 2 4
OP                   : 2
error                : 

Nonterminals, with rules where they appear

calc                 : 8 0
exp                  : 1 2 3 5 6
more                 : 3 5
next                 : 1

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . exp next
    (2) exp -> . NAME OP exp CP
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    calc                           shift and go to state 1
    exp                            shift and go to state 2

state 1

    (0) S' -> calc .



state 2

    (1) calc -> exp . next
    (3) exp -> exp . more
    (7) next -> . DOUBLESEMICOLON
    (8) next -> . DOUBLESEMICOLON calc
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

    DOUBLESEMICOLON shift and go to state 6
    COMA            shift and go to state 7

    next                           shift and go to state 4
    more                           shift and go to state 5

state 3

    (2) exp -> NAME . OP exp CP
    (4) exp -> NAME .

    OP              shift and go to state 8
    DOUBLESEMICOLON reduce using rule 4 (exp -> NAME .)
    COMA            reduce using rule 4 (exp -> NAME .)
    CP              reduce using rule 4 (exp -> NAME .)


state 4

    (1) calc -> exp next .

    $end            reduce using rule 1 (calc -> exp next .)


state 5

    (3) exp -> exp more .

    DOUBLESEMICOLON reduce using rule 3 (exp -> exp more .)
    COMA            reduce using rule 3 (exp -> exp more .)
    CP              reduce using rule 3 (exp -> exp more .)


state 6

    (7) next -> DOUBLESEMICOLON .
    (8) next -> DOUBLESEMICOLON . calc
    (1) calc -> . exp next
    (2) exp -> . NAME OP exp CP
    (3) exp -> . exp more
    (4) exp -> . NAME

    $end            reduce using rule 7 (next -> DOUBLESEMICOLON .)
    NAME            shift and go to state 3

    calc                           shift and go to state 9
    exp                            shift and go to state 2

state 7

    (5) more -> COMA . exp more
    (6) more -> COMA . exp
    (2) exp -> . NAME OP exp CP
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    exp                            shift and go to state 10

state 8

    (2) exp -> NAME OP . exp CP
    (2) exp -> . NAME OP exp CP
    (3) exp -> . exp more
    (4) exp -> . NAME

    NAME            shift and go to state 3

    exp                            shift and go to state 11

state 9

    (8) next -> DOUBLESEMICOLON calc .

    $end            reduce using rule 8 (next -> DOUBLESEMICOLON calc .)


state 10

    (5) more -> COMA exp . more
    (6) more -> COMA exp .
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

  ! shift/reduce conflict for COMA resolved as shift
    DOUBLESEMICOLON reduce using rule 6 (more -> COMA exp .)
    CP              reduce using rule 6 (more -> COMA exp .)
    COMA            shift and go to state 7

  ! COMA            [ reduce using rule 6 (more -> COMA exp .) ]

    more                           shift and go to state 12

state 11

    (2) exp -> NAME OP exp . CP
    (3) exp -> exp . more
    (5) more -> . COMA exp more
    (6) more -> . COMA exp

    CP              shift and go to state 13
    COMA            shift and go to state 7

    more                           shift and go to state 5

state 12

    (5) more -> COMA exp more .
    (3) exp -> exp more .

  ! reduce/reduce conflict for COMA resolved using rule 3 (exp -> exp more .)
  ! reduce/reduce conflict for DOUBLESEMICOLON resolved using rule 3 (exp -> exp more .)
  ! reduce/reduce conflict for CP resolved using rule 3 (exp -> exp more .)
    COMA            reduce using rule 3 (exp -> exp more .)
    DOUBLESEMICOLON reduce using rule 3 (exp -> exp more .)
    CP              reduce using rule 3 (exp -> exp more .)

  ! DOUBLESEMICOLON [ reduce using rule 5 (more -> COMA exp more .) ]
  ! COMA            [ reduce using rule 5 (more -> COMA exp more .) ]
  ! CP              [ reduce using rule 5 (more -> COMA exp more .) ]


state 13

    (2) exp -> NAME OP exp CP .

    DOUBLESEMICOLON reduce using rule 2 (exp -> NAME OP exp CP .)
    COMA            reduce using rule 2 (exp -> NAME OP exp CP .)
    CP              reduce using rule 2 (exp -> NAME OP exp CP .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for COMA in state 10 resolved as shift
WARNING: reduce/reduce conflict in state 12 resolved using rule (exp -> exp more)
WARNING: rejected rule (more -> COMA exp more) in state 12
WARNING: Rule (more -> COMA exp more) is never reduced
